# GL-260-Live

./: .cspell.json  .gitignore  GL-260 Data Analysis and Plotter V1.5.0.5.py  GL-260 Data Analysis and Plotter V1.5.6.py  GL-260 Data Analysis and Plotter V1.5.7.py  GL-260 Data Analysis and Plotter V1.5.8.py  GL-260 Data Analysis and Plotter V1.5.9.py  GL-260 Data Analysis and Plotter.py  PR-24302 Sodium Bicarbonate GL-260 Data for Analysis.xlsx  README.md  RELEASE_CHECKLIST.md  SETUP_REPORT.md  install_gl260.py  naoh_co2_pitzer_ph_model.py  pyproject.toml  requirements.txt  rust-toolchain.toml  settings.json
.tmp_patch_validation/: compare_constants_snippet.py  compare_methods_snippet.py  compare_patched_blocks.py  compare_regression_tests_snippet.py  patched_blocks.py  patched_gl260_blocks.py  patched_validate_blocks.py  post_solver_ui_patch.py  post_solver_ui_patch_current.py
General Plotter program/: General Plotting Program v1.0.0.py  general_plotter_settings.json
docs/: codex-context.md  equilibrium-presentation-outline.md  equilibrium-walkthrough.html  equilibrium-walkthrough.md  user-manual.html  user-manual.md
profiles/: PR-22048 CLM-583-0 Sodium Formate Pressure Test.json  PR-22048 CLM-583-0 Sodium Formate.json  PR-232411 CLM-1865-MPT Sodium Propionate.json  PR-24301 CLM-441-MPT Sodium Bicarbonate Batch 1.json  PR-24301 CLM-441-MPT Sodium Bicarbonate Batch 2.json  PR-24302 CLM-441-MPT Sodium Bicarbonate Batch 1 of 2 Pressure Test.json  PR-24302 CLM-441-MPT Sodium Bicarbonate Batch 1 of 2.json  PR-24302 CLM-441-MPT Sodium Bicarbonate Batch 2 of 2.json  (+10 more)
(+27 files in other folders)
